--- a/src/components/Body/Contact/ContactIntro.css
+++ b/src/components/Body/Contact/ContactIntro.css
@@ -11,6 +11,7 @@
     margin: 0;
     padding: 20px;
     flex-grow: 1;
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 600px) {
@@ -31,12 +32,12 @@
     top: 0;
     width: 100%;
     height: 100%;
-    opacity: 0;
+    opacity: .15;
     background-color: white;
     z-index: 2;
     transition: .2s;
 }
 
 .contact-intro .overlay:hover {
-    opacity: .15;
+    opacity: .3;
 }
