--- a/src/components/Body/Music/MusicIntro.css
+++ b/src/components/Body/Music/MusicIntro.css
@@ -6,14 +6,14 @@
     width: 100%;
     cursor: pointer;
     margin: 0;
-    padding: 0;
+    padding: 20px;
     /* background-color: lightblue; */
     color: white;
     margin: 0;
-    padding: 20px;
     flex-grow: 1;
     background: url('../../../images/mics.jpg') no-repeat center;
     background-size: fill;
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 600px) {
@@ -34,12 +34,12 @@
     top: 0;
     width: 100%;
     height: 100%;
-    opacity: 0;
+    opacity: .15;
     background-color: white;
     z-index: 2;
     transition: .2s;
 }
 
 .music-intro .overlay:hover {
-    opacity: .15;
+    opacity: .3;
 }
