--- a/src/components/Body/Music/MusicPlayer.css
+++ b/src/components/Body/Music/MusicPlayer.css
@@ -1,4 +1,5 @@
 .music-player {
+    color: #082728;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -15,15 +16,33 @@
 
 }
 
+.music-player-title {
+    padding: 5px;
+    overflow: hidden;
+}
+
 .song-item {
     list-style-type: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #BEC4C4;
     height: 100%;
+    padding: 10px;
+    font-size: 1.2em;
+    transition: all .2s;
+    overflow: hidden;
 }
 
 .song-title {
     cursor: pointer;
+    transition: all .2s;
+}
+
+.song-title:hover {
+    color: #BE951E;
+}
+
+.song-item .selected, .selected:hover {
+    color: #688ED2
 }
