--- a/src/components/Body/Services/ServicesIntro.css
+++ b/src/components/Body/Services/ServicesIntro.css
@@ -10,6 +10,7 @@
     color: white;
     margin: 0;
     padding: 20px;
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 600px) {
@@ -30,12 +31,12 @@
     top: 0;
     width: 100%;
     height: 100%;
-    opacity: 0;
+    opacity: .15;
     background-color: white;
     z-index: 2;
     transition: .2s;
 }
 
 .services-intro .overlay:hover {
-    opacity: .15;
+    opacity: .3;
 }
